Did staff part of bio section

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
                     <li role ="presentation"><a href="NCSSM TSA CHAPTER/Past Results.html">Past Results</a>
                 </ul>
               </li>
-              <li role="presentation"><a href="NCSSM STEM/index.html">NCSSM STEM</a></li>
+              <li role="presentation"><a href="NCSSM STEM/Biology.html">NCSSM STEM</a></li>
             </ul>
         </div>
     </nav>
