Eddited STEM page content

--- a/public_html/NCSSM STEM/Chemistry.html
+++ b/public_html/NCSSM STEM/Chemistry.html
@@ -1,16 +1,195 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <style>
+            body {
+                padding-top: 50px;
+                padding-bottom: 20px;
+            }
+        </style>
+        <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="../css/main.css">
+
+        <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="headercontainer">
+            <ul class="nav nav-pills">
+                <li role="presentation"><a href="../index.html">Home</a></li>
+                <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                  Design Brief <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <li role ="presentation"><a href="Design Brief/Solution.html">Solution</a>
+                    <li role ="presentation"><a href="Design Brief/Solution.html">Types</a>
+                </ul>
+              </li>
+              <li role="presentation" class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
+                  NCSSM TSA <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Officers.html">Officers</a>
+                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Events.html">Events</a>
+                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Past Results.html">Past Results</a>
+                </ul>
+              </li>
+              <li role="presentation"><a href="Biology.html">NCSSM STEM</a></li>
+            </ul>
+        </div>
+    </nav>
+        <div class="scienceImg">
+            <div id="scienceText">
+                NCSSM STEM
+            </div>
+        </div>
+      <div class="container scienceNav">
+          <div role="navigation">
+              <ul class="clearfix">
+                  <li class="scienceListItem">
+                      <a href="Biology.html"> Biology </a>
+                  </li>
+                  <li class="scienceListItem">
+                      <a href="ComputerScience.html"> Computer Science </a>
+                  </li>
+                  <li class="scienceListItem activeScienceNav">
+                      <a href="Chemistry.html"> Chemistry </a>
+                  </li>
+                  <li class="scienceListItem">
+                      <a href="Engineering.html"> Engineering </a>
+                  </li>
+                  <li class="scienceListItem">
+                      <a href="Math.html"> Math </a>
+                  </li>
+                  <li class="scienceListItem">
+                      <a href="Physics.html"> Physics </a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+        <div class="row">
+            <div class="col-md-6 scienceStaffSection scienceSection">
+                <h1 class="scienceSectionText">Biology <br /> Staff</h1>
+            </div>
+            <div class="col-md-6 scienceCoursesSection scienceSection">
+                <h1 class="scienceSectionText">Our <br /> Courses</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 scienceStudentSection scienceSection">
+                <h1 class="scienceSectionText">Students' <br /> Work</h1>
+            </div>
+        </div>
+            <div class="col-sm-12">
+                          <div>
+                            <div class="container">
+                                           <div class="black-staff"></div> 						  	  
+                                                     <div class="row ">			 
+                                                           <div class="subjectText col-md-3  staff col-sm-6">
+                                                                            <h2> Biology<br />Staff</h2>
+                                                           </div>
+                                                           <div class="col-md-3 col-sm-6 ">	
+                                                                    <img class="centered teacherImage"src="../img/Monahan.jpg" alt="Monahan" />
+                                                                   <div>
+                                                                       <a class="teacher-name" href="#">Kim Monahan</a> 
+                                                                       <p>Dr. Monahan joined the NCSSM faculty in 2012. Dr. Monahan primarily teaches AP Biology. She completed her Ph.D in Genetics and Molecular Biology at The University of North Carolina at Chapel Hill.  </p><a href="#" class="open-expanded-content">Read More</a><div class="clearfix"></div><div class='expanded-content'>Dr. Monahan enjoys developing novel research projects as part of the AP Biology lab curriculum. Dr. Monahan is active in the NCSSM community and has been a coach for Science Olympiad for the past two years.
+                                                                       </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                  </div>
+
+                                                           </div>
+                                                           <div class="col-md-3 col-sm-6 ">
+                                                                   <img class="centered teacherImage" src="../img/Muth.jpg" alt="Muth" />
+                                                                   <div>
+                                                                   <a class="teacher-name" href="#">Christine Muth</a> 
+                                                                   <p>Dr. Muth joined came to NCSSM in 2004. Her scientific interests include forest and freshwater ecology. She completed her Ph.D in Ecology at Harvard University. </p><a href="#" class="open-expanded-content">Read More</a><div class="clearfix"></div><div class='expanded-content'>Her education interests are focused on teaching the process of science through student centered scientific inquiry and on building partnerships between schools, scientists, and community organizations.
+                                                                   She came to NCSSM to "accept the greater challenge" every day.
+                                                                   </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                    </div>
+
+                                                           </div>
+                                                                    <div class="col-md-3 col-sm-6 ">      			
+                                                                       <img class="centered teacherImage" src="../img/Naiman.jpg" alt="Noreen Naiman" />
+                                                                       <div>
+                                                                       <a class="teacher-name" href="#">Noreen Naiman</a> 
+                                                                       <p>Dr. Naiman has been teaching at NCSSM since 1992. She primarily teaches the molecular courses (classical genetics, molecular genetics, and molecular and cellular biology). She completed her Ph.D in Medicinal Chemistry at Medical College of Va / Virginia Commonwealth University. </p><a href="#" class="open-expanded-content">Read More</a><div class="clearfix"></div><div class='expanded-content'>
+                                                                       <p>In all her courses Dr. Naiman integrates laboratory activities, cooperative learning activities, and data analysis. Dr. Naiman strives to provide opportunities for students develop laboratory and problem-solving skills relevant to the particular class.</p>
+                                                                       </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                       </div>
+                                                                   </div>
+                                                    </div>
+                                                     <div class="row " >
+                                                                    <div class=" col-md-3 col-sm-6  "  >																
+                                                                       <img class="centered teacherImage" src="../img/Powell.jpg" alt="Ashton Powell" />
+                                                                       <div>
+                                                                          <a class="teacher-name" href="#">Ashton Powell</a> 
+                                                                          <p>Dr. Powell has been with NCSSM since 2009.  He obtained his Ph.D from The University of North Carolina at Chapel Hill in Neurobiology. </p><a href="#" class="open-expanded-content">Read More</a>
+                                                                          <div class="clearfix"></div><div class='expanded-content'> Dr. Powell is interested in how the nervous system develops during embryogenesis, the anatomical basis of behavior, and the molecular and genetic mechanisms that regulate cell biology. He is also interested in the topic of science policy.  Specifically, he looks to give students the opportunity to discuss how scientific advances affect the ethical, legal, and policy frameworks of society.
+                                                                          </div><a href='#' class='close-expanded-content'>Minimize</a>                                                                                                           
+                                                                       </div>
+                                                                   </div>
+                                                                    <div class=" col-md-3 col-sm-6   " >			
+                                                                       <img class="centered teacherImage" src="../img/Schmalbeck.jpg" alt="Linda Schmalbeck" />
+                                                                       <div>
+                                                                           <a class="teacher-name" href="#">Wayan Sunarta</a> 
+                                                                           <p>Dr. Sunarta has been with NCSSM since 1997. She completed her Ph.D at The University of North Carolina at Chapel Hill in Neurobiology in Environmental Science and Engineering. </p><a href="#" class="open-expanded-content">Read More</a><div class="clearfix"></div><div class='expanded-content'>Dr.Schmalbeck is interested in the impacts of human activity on the environment, on biological communities and on human health. He is am also interested in sustainable approaches to design and energy generation. In his courses he is interested in providing many opportunities for students to discover and explore their own interests through group projects, service projects and research activities.
+                                                                           </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                       </div>
+                                                                   </div>
+                                                                    <div class=" col-md-3 col-sm-6   " >			
+                                                                       <img class="centered teacherImage" src="../img/Sheck.jpg" alt="Amy Sheck" />
+                                                                       <div>
+                                                                           <a class="teacher-name" href="#">Amy Sheck</a> 
+                                                                           <p>Dr. Sheck joined NCSSM in 2001. She currently serves as an instructor and the Dean of Science. She earned her Ph.D in Entomology at North Carolina State University. </p><a href="#" class="open-expanded-content">Read More</a>
+                                                                           <div class="clearfix"></div><div class='expanded-content'>Dr. Sheck continues to teach biology and she specializes in ecology, genetics (molecular, classical, and population), and scientific research. She supports students entering into science competitions and generally fosters the development of young scientists. 
+                                                                           Prior to coming to NCSSM, Dr. Sheck conducted research in the Entomology Dept of North Carolina State University. Her academic training is in the area of ecological genetics and she is particularly interested in evolutionary interactions between pest insects and agricultural crop plants.
+                                                                           </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                        </div>
+
+                                                                   </div>
+                                                                    <div class=" col-md-3 col-sm-6   " >		
+                                                                   <img class="centered teacherImage" src="../img/Wiley.jpg" alt="Korah Wiley" />
+                                                                       <div>
+                                                                           <a class="teacher-name" href="#">Korah Wiley</a>
+                                                                           <p>Ms. Wiley joined NCSSM in 2006. Before coming, she earned her M.S in Molecular Cancer Biology at Duke University. She teaches Anatomy and Physiology, Molecular and Cellular Biology, Forensic Science and Immunology.  </p><a href="#" class="open-expanded-content">Read More</a><div class="clearfix"></div>
+                                                                           <div class='expanded-content'>Having been trained as a cancer researcher, she looks for opportunities to incorporate new research and clinical findings into her courses.  Moreover, she is always willing to try new ideas to enhance the education process, a willingness that is driven by her passion for teaching and learning. 
+                                                                           </div><a href='#' class='close-expanded-content'>Minimize</a>											  
+                                                                       </div>
+                                                                   </div>
+                                                                  </div>
+                                         </div>
+                 </div>
+</div>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+        <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.11.1.js"><\/script>')</script>
+
+        <script src="../js/vendor/bootstrap.min.js"></script>
+
+        <script src="../js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
     </body>
 </html>
