Added most of TSA section, still have to do a little content.

--- a/public_html/NCSSM STEM/Chemistry.html
+++ b/public_html/NCSSM STEM/Chemistry.html
@@ -19,6 +19,7 @@
         </style>
         <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="../css/ncssmStem.css">
+        <link rel="stylesheet" href="../css/main.css">
 
         <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
@@ -29,7 +30,8 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="headercontainer">
             <ul class="nav nav-pills">
-                <li role="presentation" ><a href="#">NCSSM STEM</a></li>
+                <li role="presentation" ><a href="../index.html">Home</a></li>
+                <li role="presentation" ><a href="Biology.html">NCSSM STEM</a></li>
                 <li role="presentation" class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
                   Design Brief <span class="caret"></span>
@@ -41,12 +43,11 @@
               </li>
               <li role="presentation" class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-                  NCSSM TSA <span class="caret"></span>
+                  TSA <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Officers.html">Officers</a>
-                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Events.html">Events</a>
-                    <li role ="presentation"><a href="NCSSM TSA CHAPTER/Past Results.html">Past Results</a>
+                    <li role ="presentation"><a href="../TSA/TSA.html">TSA</a>
+                    <li role ="presentation"><a href="../TSA/Our Chapter.html">Our Chapter</a>
                 </ul>
               </li>
             </ul>
