--- a/public_html/NCSSM STEM/Research.html
+++ b/public_html/NCSSM STEM/Research.html
@@ -14,6 +14,7 @@
 	<meta name="viewport" content="width=device-width">
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="../css/ncssmStem.css">
+        <link rel="stylesheet" href="../css/main.css">
 	<!-- End Stylesheets -->
 	
 	<!-- Modernizer -->
