Added TSA section content

--- a/public_html/TSA/Our Chapter.html
+++ b/public_html/TSA/Our Chapter.html
@@ -46,82 +46,79 @@
         </div>
     </nav>
         <div class="row tsaRow">    
-            <div class=" leftRow align-right"></div>
-            <div class=" col-md-offset-6 rightRow"></div>
+            <div class="coverPicture">
+                <h1 class="align-center">Our Chapter</h1>
+                <h4 class="scrollNotice">Scroll to learn more</h4>
+            </div>
         </div>
         <div class="row tsaRow" style="background-color: #2a2c44">
             <h1 class="align-center" style='padding-top: 20px; padding-bottom: 50px;'>Our Officers</h1>
             <div class="row padding-left">
                 <div class="col-md-3 col-sm-6 ">	
-                        <img class="centered teacherImage" src="../img/Monahan.jpg" alt="Monahan" />
+                        <img class="centered teacherImage" src="../img/Pintoo.jpg" alt="Monahan" />
                        <div class="tsaInfo">
-                           <h3 class="">Kim Monahan</h3> 
-                           <p class="">Dr. Monahan joined the NCSSM faculty in 2012. Dr. Monahan primarily teaches AP Biology. She completed her Ph.D in Genetics and Molecular Biology at The University of North Carolina at Chapel Hill.  
+                           <h3 class="">Abhimanyu Deora: President</h3> 
+                           <p class="">Abhimanyu Deora (Pintoo) has extensive experience with TSA. He has competed in it previously and has attended the national tournament multiple times. He is the state president in addition to being the president of our chapter. 
                       </div>
 
                </div>
                <div class="col-md-3 col-sm-6 tsaInfo">
-                       <img class="centered teacherImage" src="../img/Muth.jpg" alt="Muth" />
+                       <img class="centered teacherImage" src="../img/Adithya.jpg" alt="Muth" />
                        <div>
-                       <h3 class="">Christine Muth</h3> 
-                       <p class="">Dr. Muth came to NCSSM in 2004. Her scientific interests include forest and freshwater ecology. She completed her Ph.D in Ecology at Harvard University. 											  
+                       <h3 class="">Adithya Lyengar: Co-President</h3> 
+                       <p class="">Originally from Apex, Adithya Lyengar is currently a senior at NCSSM. He is known among students for his interesting, amiable personality. His contributions to TSA make him an ideal co-president for our chapter.  											  
                         </div>
 
                </div>
                         <div class="col-md-3 col-sm-6 tsaInfo">      			
-                           <img class="centered teacherImage" src="../img/Naiman.jpg" alt="Noreen Naiman" />
+                           <img class="centered teacherImage" src="../img/Pranav.jpg" alt="Noreen Naiman" />
                            <div>
-                               <h3 class=""> Noreen Naiman</h3> 
-                           <p class="">Dr. Naiman has been teaching at NCSSM since 1992. She primarily teaches the molecular courses (classical genetics, molecular genetics, and molecular and cellular biology). She completed her Ph.D in Medicinal Chemistry at Medical College of Va / Virginia Commonwealth University. 											  
+                               <h3 class="">Parnav Lyengar: Reporter</h3> 
+                           <p class="">Parnav Lyengar is a senior at NCSSM. He is very involved in the school, both inside of TSA and outside. In addition to his role as an officer in our chapter, he is an officer in the Asian Culture Club.  											  
                            </div>
                        </div>
                         <div class="col-md-3 col-sm-6 tsaInfo">      			
-                           <img class="" src="../img/Naiman.jpg" alt="Noreen Naiman" />
+                           <img class="" src="../img/Kat.jpg" alt="Noreen Naiman" />
                            <div class="lastOfficer">
-                           <h3 class="">Noreen Naiman</h3> 
-                           <p class="">Dr. Naiman has been teaching at NCSSM since 1992. She primarily teaches the molecular courses (classical genetics, molecular genetics, and molecular and cellular biology). She completed her Ph.D in Medicinal Chemistry at Medical College of Va / Virginia Commonwealth University.</p>											  
+                           <h3 class="">Kat Fenske: Secretary</h3> 
+                           <p class="">As a junior, Kat Fenske was able to impress our chapter quickly, earning her spot as an officer, even without prior experience with NCSSM TSA. She is distinguished by her passion and energy. </p>											  
                            </div>
                        </div>
                     </div>
             <div class="row padding-bottom padding-left" >
                     <div class=" col-md-3 col-sm-6 tsaInfo " >			
-                       <img class="centered teacherImage" src="../img/Schmalbeck.jpg" alt="Linda Schmalbeck" />
+                       <img class="centered teacherImage" src="../img/Tejas.jpg" alt="Linda Schmalbeck" />
                        <div>
-                           <h3 class="teacher-name">Wayan Sunarta</h3> 
-                           <p class="content-text">Dr. Sunarta has been with NCSSM since 1997. She completed her Ph.D at The University of North Carolina at Chapel Hill in Neurobiology in Environmental Science and Engineering.											  
+                           <h3 class="teacher-name">Tejas Dalvi: Sergeant-at-Arms</h3> 
+                           <p class="content-text">Tejas Dalvi has been involved with TSA for many years, making him an ideal candidate for an officer position, despite only being a junior. He is known for his energy, charisma and clever group names.			  
                        </div>
                    </div>
                     <div class=" col-md-3 col-sm-6 tsaInfo   " >			
-                       <img class="centered teacherImage" src="../img/Sheck.jpg" alt="Amy Sheck" />
+                       <img class="centered teacherImage" src="../img/Ebube.jpg" alt="Amy Sheck" />
                        <div>
-                           <h3 class="teacher-name">Amy Sheck</h3> 
-                           <p class="content-text">Dr. Sheck joined NCSSM in 2001. She currently serves as an instructor and the Dean of Science. She earned her Ph.D in Entomology at North Carolina State University.
+                           <h3 class="teacher-name">Ebube Chuba: Treasurer</h3> 
+                           <p class="content-text">Ebube Chuba is a senior at NCSSM. In addition to being an officer in our chapter, he holds the position of state secretary. He has attended the national conference multiple times. 
                         </div>
 
                    </div>
                     <div class=" col-md-3 col-sm-6 tsaInfo  " >		
-                   <img class="centered teacherImage" src="../img/Wiley.jpg" alt="Korah Wiley" />
+                   <img class="centered teacherImage" src="../img/Christian.jpg" alt="Korah Wiley" />
                        <div>
-                           <h3 class="teacher-name">Korah Wiley</h3>
-                           <p class="content-text">Ms. Wiley joined NCSSM in 2006. Before coming, she earned her M.S in Molecular Cancer Biology at Duke University. She teaches Anatomy and Physiology, Molecular and Cellular Biology, Forensic Science and Immunology. 
-                       </div>
-                   </div>
-                    <div class=" col-md-3 col-sm-6 tsaInfo  " >		
-                   <img class="centered teacherImage" src="../img/Martyn.jpg" alt="Korah Wiley" />
-                       <div class="lastOfficer">
-                           <h3 class="teacher-name">Amanda Martyn</h3>
-                           <p class="content-text">A Canadian native, Dr. Martyn grew up in Bolton, Ontario, just north of Toronto. She received her B.Sc. from the University of Guelph in 1999, followed by her M.Sc. in 2002, specializing in Molecular Biology and Genetics.											  
+                           <h3 class="teacher-name">Christian Joseph: Vice President</h3>
+                           <p class="content-text">Christian Joseph is currently a senior at NCSSM. In addition to his role as vice president in our chapter, he serves as state treasurer, where it is his obligation to see that all financial responsibilities of NCTSA are met. 
                        </div>
                    </div>
                   </div>
                 </div>
         <div class="row tsaRow" style="background-color: #40bfc1">
-            <h1 class="align-center">Community Service</h1>
-            <div class="col-md-6 pictureLeft"></div>
-            <div class="col-md-6 col-md-offset-6 tsaInfo align-center contentRight">
+            <h1 class="align-center" style='padding-bottom: 10px;'>Community Service</h1>
+            <div class="col-md-6">
+            <img src='../img/midOurChapter.jpg' class='ourChapterPic'>
+            </div>
+            <div class="col-md-6 tsaInfo align-center contentRight">
                 <h3>Our Work</h3>
-                <p>
-                    TODO: bs some community service I can say that we do. 
+                <p class='chapter-text'>
+                    The members of our chapter are active at NCSSM, inside of the classroom, inside our chapter and in the greater community. Members of our chapter strive to maintain excellent grades, excel in their events in TSA and impact the greater community. Members of our chapter all complete 60 hours of community service the summer of their junior or senior year. In addition to this service, the chapter engages with the community in numerous other ways. Members of our chapter volunteered in a food drive to raise money and food for a local food bank, often volunteer to help in Open Houses and often assist other students with their work. Our officers make it a priority to reinforce the importance of giving to the community. 
                 </p>
             </div>
             </div>
@@ -132,11 +129,11 @@
                 <div class='row'>
                 <div class='col-md-6 padding-medium tsaInfo'>
                     <h2>Awards</h2>
-                    <p>TODO: bs some content</p>
+                    <p class='chapter-text'>Our chapter our TSA has often been recognized for our distinguished performance. We have been represented at the national conference every year within memory of our chapter's existence at NCSSM. Our members strive to do well in their events, generating great results. Because of our great environment and culture of success, winners of state events often come from our chapter. </p>
                 </div>
                 <div class='col-md-6 padding-medium tsaInfo' >
-                    <h2>Activites</h2>
-                    <p>TODO: bs some content </p>
+                    <h2>Activities</h2>
+                    <p class='chapter-text'>Our chapter holds regular meetings to ensure that members are making progress on their events. We pride ourselves in being a collaborative environment; as the state competition approaches, we hold practice sessions where members can seek help from one another, enjoy pizza and focus on success. The activities of our chapter: our formal meetings, community service sessions and practice sessions are easily recognized on campus.  </p>
                 </div>
                 </div>
         </div>
